# tracks-rs

./: .gitignore  Cargo.toml  README.md  build.rs  qpm.json  qpm.shared.json
.github/workflows/: build.yml
benches/: base_provider_swizzle.rs  color.rs  coroutine_manager.rs  float.rs  json_parsing.rs  path_interpolation.rs  property_lookup.rs  quat.rs  vec3.rs
docs/: architecture.md
shared/: bindings.h  wrappers.h
src/: base_provider_context.rs  base_value.rs  context.rs  lib.rs  quaternion_utils.rs  test_helpers.rs  types.rs  value_types.rs  values.rs
src/animation/: coroutine_manager.rs  events.rs  game_object.rs  mod.rs  property.rs  track.rs  tracks.rs  tracks_holder.rs
src/easings/: functions.rs
src/ffi/: base_provider_context.rs  context.rs  coroutine_manager.rs  easings.rs  event_data.rs  json.rs  mod.rs  point_def.rs  property.rs  time.rs  track.rs  tracks_holder.rs  types.rs
src/ffi/point_def/: base.rs  float.rs  quat.rs  vec3.rs  vec4.rs
src/modifiers/: base_modifier.rs  basic_modifier.rs  float_modifier.rs  mod.rs  modifier.rs  operation.rs  quaternion_modifier.rs  vector3_modifier.rs  vector4_modifier.rs
src/point_data/: base_point_data.rs  basic_point_data.rs  float_point_data.rs  mod.rs  point_data.rs  quaternion_point_data.rs  vector3_point_data.rs  vector4_point_data.rs
src/point_definition/: base_point_definition.rs  basic_point_definition.rs  float_point_definition.rs  mod.rs  point_definition_interpolation.rs  quaternion_point_definition.rs  vector3_point_definition.rs  vector4_point_definition.rs
src/providers/: base.rs  base_ffi.rs  mod.rs  partial.rs  quat.rs  smooth.rs  smooth_rot.rs  static.rs  value.rs
src/types/: base_value.rs  quaternion_utils.rs  value_types.rs
src/values/: base.rs  base_ffi.rs  base_provider_context.rs  mod.rs  partial.rs  quat.rs  smooth.rs  smooth_rot.rs  static.rs  updatable.rs  value.rs
tests/: color_point_definition.rs  f32_point_definition.rs  json_parsing.rs  quat_point_definition.rs  swizzle_smoothing.rs  value_provider.rs  vec3_point_definition.rs
tracks-window/: Cargo.toml
tracks-window/src/graphing/: color_graphing.rs  float_graphing.rs  quat_graphing.rs  vec3_graphing.rs
