[package]
name = "tracks_rs"
version = "0.2.0"
edition = "2024"

[lib]
name = "tracks_rs"
crate-type = ["cdylib", "staticlib", "lib"]

[workspace]
members = ["tracks-window"]


[[bench]]
name = "float"
harness = false

[[bench]]
name = "vec3"
harness = false
[[bench]]
name = "quat"
harness = false

[[bench]]
name = "color"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# track_rs_old = { git = "https://github.com/Futuremappermydud/tracks-rs.git", branch = "old-benchmark", package = "tracks_rs", optional = true} # reference to the tracks-rs crate

[dependencies]
glam = { version = "0.30", features = [
    "core-simd",
] } #SIMD supported vector types\
palette = "0.7.6"
cfg-if = "1"
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-error = { version = "*", default-features = false }
thiserror = "2"
serde_json = { version = "1.0", optional = true }
ctor = "0.3.6"
paranoid-android = "*"
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
minifb = { version = "0.28", optional = true }
plotters = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
minifb = { version = "0.28", optional = true }
plotters = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"
paranoid-android = { version = "*", optional = true }

[build-dependencies]
cbindgen = { version = "0.28", optional = true }

[features]
json = ["dep:serde_json"]
ffi = ["dep:cbindgen"]
compare_old = []
default = ["json", "ffi"]

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
