[package]
name = "tracks_rs"
version = "0.2.0"
edition = "2024"

[lib]
name = "tracks_rs"
crate-type = ["cdylib", "staticlib", "lib"]

[workspace]
members = ["tracks-window"]


[[bench]]
name = "float"
harness = false

[[bench]]
name = "vec3"
harness = false
[[bench]]
name = "quat"
harness = false

[[bench]]
name = "color"
harness = false

[[bench]]
name = "coroutine_manager"
harness = false

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

# track_rs_old = { git = "https://github.com/Futuremappermydud/tracks-rs.git", branch = "old-benchmark", package = "tracks_rs", optional = true} # reference to the tracks-rs crate

[dependencies]
glam = { version = "0.30", features = [
    "core-simd",
] } #SIMD supported 
palette = "0.7" # for color manipulation

cfg-if = "1"
thiserror = "2"
serde_json = { version = "1.0", optional = true }
itertools = "0.14"
ahash = "0.8" # for hashmaps
uuid = {version = "1", features = ["v4"] }
log = "0.4"
slotmap = "1.0"
smallvec = "1.15"


[build-dependencies]
cbindgen = { version = "0.29", optional = true, default-features = false}

[features]
json = ["dep:serde_json"]
ffi = ["dep:cbindgen"]
compare_old = []
default = ["json", "ffi"]
