[package]
name = "tracks-window"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tracks-window"
path = "src/main.rs"

[dependencies]
tracks_rs = { path = "../", features = ["json"]} 

minifb = { version = "0.28" }
plotters = { version = "0.3" }
serde_json = "1.0"
glam = "0.32"

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
